RESOLVED FIXED242458
REGRESSION (iOS 16): RemoteLayerTreeDrawingAreaProxy::commitLayerTree is more expensive
https://bugs.webkit.org/show_bug.cgi?id=242458
Summary REGRESSION (iOS 16): RemoteLayerTreeDrawingAreaProxy::commitLayerTree is more...
Aditya Keerthi
Reported 2022-07-07 10:24:19 PDT
Attachments
Aditya Keerthi
Comment 1 2022-07-07 14:16:07 PDT
EWS
Comment 2 2022-07-08 13:52:12 PDT
Committed 252293@main (3a31c6b8c8ba): <https://commits.webkit.org/252293@main> Reviewed commits have been landed. Closing PR #2192 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.