REGRESSION (iOS 16): RemoteLayerTreeDrawingAreaProxy::commitLayerTree is more expensive https://bugs.webkit.org/show_bug.cgi?id=242458 rdar://95884521

Reviewed by Tim Horton.

In iOS 16, `-[UITraitCollection currentTraitCollection]` is more expensive when
determining the fallback trait collection, as additional UIScreens are traversed.

`RemoteLayerTreeDrawingAreaProxy::commitLayerTree` results in calls to this method
when updating the scroll view's background color, via `LocalCurrentTraitCollection`.

While UIKit is working on improving the performance of
`-[UITraitCollection currentTraitCollection]`, we can mitigate the issue in WebKit
by avoiding calls to it entirely.

We now use `-[UITraitCollection performAsTraitCollection]` to temporarily adjust
the trait collection. This method elides calls to `-[UITraitCollection currentTraitCollection]`
in cases where it would compute fallback traits.

From local testing this changes reduces the time spent determining the scroll view
background color from 6.3 μs to 2.6 μs.

* Source/WebCore/platform/ios/LocalCurrentTraitCollection.h:

Removed unused methods and member variables.

(WebCore::LocalCurrentTraitCollection::usingDarkAppearance const): Deleted.
(WebCore::LocalCurrentTraitCollection::usingElevatedUserInterfaceLevel const): Deleted.
(): Deleted.
* Source/WebCore/platform/ios/LocalCurrentTraitCollection.mm:
(WebCore::LocalCurrentTraitCollection::LocalCurrentTraitCollection):

Using the fallback trait collection in combination with other traits can result
in undefined behavior. In the long term, this method should use a defined trait
collection taken from the view hierarchy.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(scrollViewBackgroundColor):
* Source/WebKit/UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::contentViewBackgroundColor):

Canonical link: https://commits.webkit.org/252293@main