Source/WebCore/platform/ios/LocalCurrentTraitCollection.h
@@ -41,32 +41,11 @@ class LocalCurrentTraitCollection {
 
 public:
     WEBCORE_EXPORT LocalCurrentTraitCollection(bool useDarkAppearance, bool useElevatedUserInterfaceLevel);
-    WEBCORE_EXPORT LocalCurrentTraitCollection(UITraitCollection *);
     WEBCORE_EXPORT ~LocalCurrentTraitCollection();
-
-    bool usingDarkAppearance() const
-    {
-#if HAVE(OS_DARK_MODE_SUPPORT)
-        return m_usingDarkAppearance;
-#else
-        return false;
-#endif
-    }
-
-    bool usingElevatedUserInterfaceLevel() const
-    {
-#if HAVE(OS_DARK_MODE_SUPPORT)
-        return m_usingElevatedUserInterfaceLevel;
-#else
-        return false;
-#endif
-    }
 
 private:
 #if HAVE(OS_DARK_MODE_SUPPORT)
     RetainPtr<UITraitCollection> m_savedTraitCollection;
-    bool m_usingDarkAppearance { false };
-    bool m_usingElevatedUserInterfaceLevel { false };
 #endif
 };
 
