Source/WebKit/UIProcess/ios/PageClientImplIOS.mm
@@ -64,7 +64,6 @@
 #import <WebCore/Cursor.h>
 #import <WebCore/DOMPasteAccess.h>
 #import <WebCore/DictionaryLookup.h>
-#import <WebCore/LocalCurrentTraitCollection.h>
 #import <WebCore/NotImplemented.h>
 #import <WebCore/PlatformScreen.h>
 #import <WebCore/PromisedAttachmentInfo.h>
@@ -1034,18 +1033,26 @@ void PageClientImpl::runModalJavaScriptDialog(CompletionHandler<void()>&& callba
 
 WebCore::Color PageClientImpl::contentViewBackgroundColor()
 {
+    WebCore::Color color;
+    auto computeContentViewBackgroundColor = [&]() {
+        color = WebCore::roundAndClampToSRGBALossy([m_contentView backgroundColor].CGColor);
+        if (color.isValid())
+            return;
+
 #if HAVE(OS_DARK_MODE_SUPPORT)
-    WebCore::LocalCurrentTraitCollection localTraitCollection([m_webView traitCollection]);
+        color = WebCore::roundAndClampToSRGBALossy(UIColor.systemBackgroundColor.CGColor);
+#else
+        color = { };
+#endif
+    };
+
+#if HAVE(OS_DARK_MODE_SUPPORT)
+    [[m_webView traitCollection] performAsCurrentTraitCollection:computeContentViewBackgroundColor];
+#else
+    computeContentViewBackgroundColor();
 #endif
 
-    WebCore::Color color = WebCore::roundAndClampToSRGBALossy([m_contentView backgroundColor].CGColor);
-    if (color.isValid())
-        return color;
-#if HAVE(OS_DARK_MODE_SUPPORT)
-    return WebCore::roundAndClampToSRGBALossy(UIColor.systemBackgroundColor.CGColor);
-#else
-    return { };
-#endif
+    return color;
 }
 
 void PageClientImpl::requestScrollToRect(const FloatRect& targetRect, const FloatPoint& origin)
